!modify xml in player screen scene

--- a/app/src/main/res/layout/fragment_player_screen.xml
+++ b/app/src/main/res/layout/fragment_player_screen.xml
@@ -2,11 +2,24 @@
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/playerBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     app:layoutDescription="@xml/fragment_player_screen_scene"
+    app:layout_collapseMode="parallax"
     tools:context=".PlayerScreen">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/bg_player_scene"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:cardBackgroundColor="@color/playerBackground"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_collapse_player"
@@ -38,12 +51,55 @@
         app:srcCompat="@drawable/demo_album" />
 
     <TextView
+        android:id="@+id/tv_tittle_min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:elevation="10dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxLines="1"
+        android:outlineProvider="none"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:singleLine="true"
+        android:text="Mati Muda"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_album" />
+
+    <TextView
+        android:id="@+id/tv_artist_min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:elevation="10dp"
+        android:gravity="center"
+        android:outlineProvider="none"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="Kelompok Penerbang Roket"
+        android:textColor="@color/textOrange"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_tittle_min" />
+
+    <TextView
         android:id="@+id/tv_tittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:elevation="10dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxLines="1"
         android:outlineProvider="none"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="Mati Muda"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -57,7 +113,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:elevation="10dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxLines="1"
         android:outlineProvider="none"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="Kelompok Penerbang Roket"
         android:textColor="@color/textOrange"
         android:textSize="18sp"
@@ -66,72 +127,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_tittle" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/frame_player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:outlineProvider="none"
+    <ImageView
+        android:id="@+id/iv_skip_pre"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+        app:srcCompat="@drawable/ic_skip_previous" />
+
+    <ImageView
+        android:id="@+id/iv_back_10"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+        app:layout_constraintEnd_toStartOf="@+id/iv_play_pause"
+        app:layout_constraintStart_toEndOf="@+id/iv_skip_pre"
+        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+        app:srcCompat="@drawable/ic_backward" />
+
+    <ImageView
+        android:id="@+id/iv_play_pause"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@id/space_bottom"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_pause" />
 
-        <ImageView
-            android:id="@+id/iv_skip_pre"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-            app:srcCompat="@drawable/ic_skip_previous" />
+    <ImageView
+        android:id="@+id/iv_forward_10"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+        app:layout_constraintEnd_toStartOf="@+id/iv_skip_next"
+        app:layout_constraintStart_toEndOf="@+id/iv_play_pause"
+        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+        app:srcCompat="@drawable/ic_forward" />
 
-        <ImageView
-            android:id="@+id/iv_back_10"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-            app:layout_constraintEnd_toStartOf="@+id/iv_play_pause"
-            app:layout_constraintStart_toEndOf="@+id/iv_skip_pre"
-            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-            app:srcCompat="@drawable/ic_backward" />
-
-        <ImageView
-            android:id="@+id/iv_play_pause"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_pause" />
-
-        <ImageView
-            android:id="@+id/iv_forward_10"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
-            app:layout_constraintEnd_toStartOf="@+id/iv_skip_next"
-            app:layout_constraintStart_toEndOf="@+id/iv_play_pause"
-            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-            app:srcCompat="@drawable/ic_forward" />
-
-        <ImageView
-            android:id="@+id/iv_skip_next"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
-            app:srcCompat="@drawable/ic_skip_next" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/iv_skip_next"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_play_pause"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
+        app:srcCompat="@drawable/ic_skip_next" />
 
 
     <Space
