--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,14 +3,17 @@
 
     <item
         android:id="@+id/action_first_fragment"
-        android:title="1" />
+        android:icon="@drawable/smartphone"
+        android:title="" />
 
     <item
         android:id="@+id/action_second_fragment"
-        android:title="2" />
+        android:icon="@drawable/newspaper"
+        android:title="" />
 
     <item
         android:id="@+id/action_third_fragment"
-        android:title="3" />
+        android:icon="@drawable/vektor"
+        android:title="" />
 
 </menu>
