(!) change style to bold in title

--- a/app/src/main/res/layout/item_list_article.xml
+++ b/app/src/main/res/layout/item_list_article.xml
@@ -29,6 +29,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:maxLines="3"
+        android:textStyle="bold"
+        android:lineSpacingExtra="1sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
         app:layout_constraintTop_toTopOf="@+id/iv_thumbnail"
