! modify xml + playscreen layout

--- a/app/src/main/res/layout/activity_audio_articles.xml
+++ b/app/src/main/res/layout/activity_audio_articles.xml
@@ -10,9 +10,11 @@
         android:id="@+id/rv_audio_articles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:clipToPadding="false"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_list_article" />
