--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="playerBackground">#fefbe3</color>
-    <color name="textOrange">#ff7775</color>
+    <color name="playerBackground">#FFFFFFFF</color>
+    <color name="buttonBackground">#4e4c62</color>
+    <color name="textBlack">#333333</color>
+    <color name="textGray">#999999</color>
     <color name="blue">#E9F5FD</color>
 
 </resources>
