--- a/app/src/main/res/drawable/ic_pause.xml
+++ b/app/src/main/res/drawable/ic_pause.xml
@@ -1,5 +1,12 @@
-<vector android:height="24dp" android:tint="#878787"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/darker_gray" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10s10,-4.48 10,-10S17.52,2 12,2zM11,16H9V8h2V16zM15,16h-2V8h2V16z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="327"
+    android:viewportHeight="327">
+  <path
+      android:pathData="m158,0h71c4.418,0 8,3.582 8,8v311c0,4.418 -3.582,8 -8,8h-71c-4.418,0 -8,-3.582 -8,-8v-311c0,-4.418 3.582,-8 8,-8zM158,0"
+      android:fillColor="#00599a"/>
+  <path
+      android:pathData="m8,0h71c4.418,0 8,3.582 8,8v311c0,4.418 -3.582,8 -8,8h-71c-4.418,0 -8,-3.582 -8,-8v-311c0,-4.418 3.582,-8 8,-8zM8,0"
+      android:fillColor="#00599a"/>
 </vector>
