--- a/app/src/main/res/layout/fragment_player_screen.xml
+++ b/app/src/main/res/layout/fragment_player_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ruangaldo.video_youtube.ui.PlayerScreenMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,12 @@
     android:background="@android:color/transparent"
     app:layoutDescription="@xml/fragment_player_screen_scene"
     app:layout_collapseMode="parallax"
-    tools:context=".PlayerScreen">
+    tools:context=".ui.PlayerScreen">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/bg_player_scene"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:cardBackgroundColor="@color/playerBackground"
         app:cardCornerRadius="0dp"
         app:cardElevation="0dp"
@@ -23,27 +23,26 @@
 
     <ImageView
         android:id="@+id/iv_collapse_player"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_gravity="center"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:elevation="10dp"
         android:outlineProvider="none"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_collapse_player" />
 
     <ImageView
         android:id="@+id/iv_album"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:elevation="10dp"
         android:outlineProvider="none"
-        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintDimensionRatio="2:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent=".4"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +80,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:text="Kelompok Penerbang Roket"
-        android:textColor="@color/textOrange"
+        android:textColor="@color/textGray"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,8 +100,9 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:text="Mati Muda"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
+        android:textColor="@color/textBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_album" />
@@ -120,9 +120,8 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:text="Kelompok Penerbang Roket"
-        android:textColor="@color/textOrange"
+        android:textColor="@color/textGray"
         android:textSize="18sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_tittle" />
@@ -149,15 +148,25 @@
         app:layout_constraintTop_toTopOf="@+id/iv_play_pause"
         app:srcCompat="@drawable/ic_backward" />
 
-    <ImageView
+    <FrameLayout
         android:id="@+id/iv_play_pause"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:elevation="10dp"
+        android:outlineProvider="none"
         android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@id/space_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_pause" />
+        app:srcCompat="@drawable/bg_butt_play" >
+
+        <ImageView
+            android:id="@+id/play_pause_image_view"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_pause" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/iv_forward_10"
@@ -191,4 +200,4 @@
         app:layout_constraintHeight_percent=".1"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</com.ruangaldo.video_youtube.ui.PlayerScreenMotionLayout>
