--- a/app/src/main/res/xml/fragment_player_screen_scene.xml
+++ b/app/src/main/res/xml/fragment_player_screen_scene.xml
@@ -6,9 +6,8 @@
     <ConstraintSet android:id="@+id/screen_normal">
         <Constraint
             android:id="@+id/bg_player_scene"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="3dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -16,22 +15,21 @@
             app:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/iv_collapse_player"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/bg_player_scene" />
         <Constraint
             android:id="@+id/iv_album"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintDimensionRatio="2:1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent=".4"
+            app:layout_constraintHeight_percent=".5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_collapse_player"
             app:layout_constraintVertical_chainStyle="packed" />
@@ -85,7 +83,7 @@
                 app:customFloatValue="0.0" />
             <CustomAttribute
                 app:attributeName="textColor"
-                app:customColorValue="@color/textOrange" />
+                app:customColorValue="@color/textGray" />
         </Constraint>
         <Constraint
             android:id="@+id/iv_play_pause"
@@ -187,7 +185,7 @@
                 app:customFloatValue="0.0" />
             <CustomAttribute
                 app:attributeName="textColor"
-                app:customColorValue="@color/textOrange" />
+                app:customColorValue="@color/textGray" />
         </Constraint>
         <Constraint
             android:id="@+id/tv_tittle_min"
@@ -212,7 +210,7 @@
                 app:customFloatValue="1.0" />
             <CustomAttribute
                 app:attributeName="textColor"
-                app:customColorValue="@color/textOrange" />
+                app:customColorValue="@color/textGray" />
         </Constraint>
         <Constraint
             android:id="@+id/iv_play_pause"
@@ -276,10 +274,97 @@
         app:constraintSetStart="@+id/screen_minimize"
         app:motionInterpolator="easeInOut"
         motion:duration="100">
-        <OnClick
+        <OnSwipe
             app:dragDirection="dragUp"
             app:maxAcceleration="200"
             app:touchAnchorId="@id/bg_player_scene"
             app:touchAnchorSide="top" />
+        <KeyFrameSet>
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/tv_tittle">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="1.0" />
+            </KeyAttribute>
+            <KeyAttribute
+                app:framePosition="70"
+                app:motionTarget="@id/tv_tittle">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0.0" />
+            </KeyAttribute>
+        </KeyFrameSet>
+        <KeyFrameSet>
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/tv_artist">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="1.0" />
+            </KeyAttribute>
+
+            <KeyAttribute
+                app:framePosition="80"
+                app:motionTarget="@id/tv_artist">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0.0" />
+            </KeyAttribute>
+        </KeyFrameSet>
+
+        <KeyFrameSet>
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/iv_collapse_player">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="1.0" />
+            </KeyAttribute>
+
+            <KeyAttribute
+                app:framePosition="70"
+                app:motionTarget="@id/iv_collapse_player">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0.0" />
+            </KeyAttribute>
+        </KeyFrameSet>
+
+        <KeyFrameSet>
+            <KeyAttribute
+                app:framePosition="0"
+                app:motionTarget="@id/tv_tittle_min">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="1.0" />
+            </KeyAttribute>
+
+            <KeyAttribute
+                app:framePosition="70"
+                app:motionTarget="@id/tv_tittle_min">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0.0" />
+            </KeyAttribute>
+        </KeyFrameSet>
+
+        <KeyFrameSet>
+            <KeyAttribute
+                app:framePosition="0"
+                app:motionTarget="@id/tv_artist_min">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="1.0" />
+            </KeyAttribute>
+
+            <KeyAttribute
+                app:framePosition="70"
+                app:motionTarget="@id/tv_artist_min">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0.0" />
+            </KeyAttribute>
+        </KeyFrameSet>
     </Transition>
 </MotionScene>
