--- a/app/src/main/res/layout/fragment_player_screen.xml
+++ b/app/src/main/res/layout/fragment_player_screen.xml
@@ -37,14 +37,14 @@
 
     <ImageView
         android:id="@+id/iv_album"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="328dp"
+        android:layout_height="183dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="16dp"
         android:elevation="10dp"
         android:outlineProvider="none"
-        app:layout_constraintDimensionRatio="2:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent=".4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_collapse_player"
         app:srcCompat="@drawable/demo_album" />
